# dbt-tutorial-course

./: pyproject.toml
lessons/: dbt_project.yml
lessons/models/marts/: dim_orders.sql
lessons/models/staging/: src_ecommerce.yml  stg_ecommerce__order_items.yml  stg_ecommerce__orders.sql  stg_ecommerce__orders.yml  stg_ecommerce__products.yml
lessons/tests/: test_order_details_match_order.sql
