[tool.poetry]
name = "dbt-tutorial-course"
version = "0.1.0"
description = ""
authors = ["Luca Knaack <l.knaack93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "1.6.1"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
